<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">



        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:layoutDescription="@xml/activity_main_xml_top_layout_scene">

            <ImageView
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:contentDescription="@string/filter"
                android:src="@drawable/filter"
                app:layout_constraintEnd_toStartOf="@+id/notif"
                app:layout_constraintTop_toTopOf="@+id/notif" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_114sdp"
                android:layout_marginStart="@dimen/_33sdp"
                android:elevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/filter"
                android:src="@drawable/search"
                />

            <ImageView
                android:id="@+id/notif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:contentDescription="@string/notification"
                android:src="@drawable/notification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="?attr/actionBarSize"
                android:fontFamily="@font/figtree_bold"
                android:text="@string/buyers"
                android:textColor="@color/white"
                android:textSize="@dimen/_21sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="@dimen/_68sdp"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/line_white"
                app:layout_constraintEnd_toEndOf="@+id/title"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/buyer_count_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/figtree_regular"
                android:text="@string/_12_buyers"
                android:textColor="@color/text_inactive"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_15sdp"
                app:cardBackgroundColor="@color/primary_dark"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/Filter_searchView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/searchbar"
                    app:iconifiedByDefault="false"
                    app:searchIcon="@drawable/search"
                    app:queryBackground="@android:color/transparent"
                    app:queryHint="Search Buyers" />
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/temp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView2"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_15sdp"
                app:cardBackgroundColor="@color/primary_dark"
                app:cardCornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/all"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        app:cardBackgroundColor="@color/primary_dark"
                        app:cardCornerRadius="@dimen/_16sdp"
                        app:cardElevation="0dp">

                        <TextView
                            style="@style/text_primary"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/all" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/superlist"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        app:cardBackgroundColor="@color/tab_active"
                        app:cardCornerRadius="@dimen/_16sdp"
                        app:cardElevation="0dp">

                        <TextView
                            style="@style/text_primary"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/super_stocklist" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/distributor"
                        android:layout_width="@dimen/_75sdp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        app:cardBackgroundColor="@color/primary_dark"
                        app:cardCornerRadius="@dimen/_16sdp"
                        app:cardElevation="0dp">

                        <TextView
                            style="@style/text_primary"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/distributor" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/retailer"
                        android:layout_width="@dimen/_75sdp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        app:cardBackgroundColor="@color/primary_dark"
                        app:cardCornerRadius="@dimen/_16sdp"
                        app:cardElevation="0dp">

                        <TextView
                            style="@style/text_primary"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/retailer" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_50sdp"
                android:background="@color/line"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@+id/temp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/line"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:background="@color/primary"
                        android:layout_height="@dimen/_50sdp"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerview"
                        android:background="@drawable/top_rounded"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:layout_marginTop="-45dp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:padding="@dimen/_5sdp"
                        tools:listitem="@layout/recyclerview_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.motion.widget.MotionLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/primary"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_75sdp"
        android:src="@drawable/baseline_add_24"
        android:contentDescription="@string/add" />


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/white"
        app:hideOnScroll="true"
        app:elevation="@dimen/_10sdp"
        app:fabAlignmentMode="center" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:background="@color/white"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.19"
                android:fontFamily="@font/figtree_regular"
                android:drawablePadding="@dimen/_5sdp"
                android:textColor="@color/text_sec"
                android:text="@string/home"
                android:gravity="center"
                app:drawableTopCompat="@drawable/home" />
            <TextView
                android:id="@+id/buyer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.19"
                android:text="@string/buyers"
                android:fontFamily="@font/figtree_regular"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center"
                android:textColor="@color/primary"
                app:drawableTopCompat="@drawable/buyers2" />
            <TextView
                android:id="@+id/attendence"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.23"
                android:text="@string/attendence"
                android:textColor="@color/text_sec"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/figtree_regular"
                android:gravity="center"
                app:drawableTopCompat="@drawable/attendence" />
            <TextView
                android:id="@+id/orders"
                android:layout_width="0dp"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/orders"
                android:textColor="@color/text_sec"
                android:fontFamily="@font/figtree_regular"
                android:gravity="center"
                app:drawableTopCompat="@drawable/bag" />
            <TextView
                android:id="@+id/more"
                android:layout_width="0dp"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_height="match_parent"
                android:layout_weight="0.19"
                android:text="@string/more"
                android:fontFamily="@font/figtree_regular"
                android:textColor="@color/text_sec"
                android:gravity="center"
                app:drawableTopCompat="@drawable/more" />
        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>



</androidx.coordinatorlayout.widget.CoordinatorLayout>