<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/figtree_bold"
            android:textColor="@color/black"
            android:text="@string/sphnix_cofee"
            android:textSize="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/figtree_regular"
            android:text="@string/view_more"
            android:textColor="@color/text_active"
            android:textSize="@dimen/_14sdp"
            app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@color/line"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:layout_editor_absoluteX="6dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            tools:layout_editor_absoluteX="6dp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_70sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/item_img" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="start|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/figtree_bold"
                    android:textColor="@color/black"
                    android:text="@string/ritual_modern_agency"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:fontFamily="@font/figtree_regular"
                    android:text="@string/c_block_phase_2_industrial_area_sector_62_noida_u_p"
                    android:textColor="@color/text_sec"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:cardBackgroundColor="@color/success_background"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_8sdp"
                android:textColor="@color/primary"
                android:fontFamily="@font/figtree_regular"
                android:padding="@dimen/_5sdp"
                android:text="@string/order_placed"
                app:drawableStartCompat="@drawable/success" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/view_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/figtree_regular"
            android:text="@string/view_details"
            android:textColor="@color/text_active"
            android:textSize="@dimen/_12sdp"
            app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24"
            app:layout_constraintBottom_toBottomOf="@+id/cardView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView3" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/view_details"
            tools:layout_editor_absoluteX="6dp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_70sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/item_img" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="start|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/figtree_bold"
                    android:text="@string/ritual_modern_agency"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:fontFamily="@font/figtree_regular"
                    android:text="@string/c_block_phase_2_industrial_area_sector_62_noida_u_p"
                    android:textColor="@color/text_sec"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:cardBackgroundColor="@color/secondary_background"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="@+id/linearLayout5"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_8sdp"
                android:textColor="@color/dark_red"
                android:fontFamily="@font/figtree_regular"
                android:padding="@dimen/_5sdp"
                android:text="@string/not_visited"
                app:drawableStartCompat="@drawable/failed" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/figtree_regular"
            android:text="@string/view_details"
            android:textColor="@color/text_active"
            android:textSize="@dimen/_12sdp"
            app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24"
            app:layout_constraintBottom_toBottomOf="@+id/cardView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>